[project]
name = "whitetreebible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.1",
    "mkdocs>=1.6.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
